@@ -1,0 +1,5 @@
+<ImportKeyPairResponse xmlns="http://ec2.amazonaws.com/doc/2010-08-31/">
+    <requestId>7a62c49f-347e-4fc4-9331-6e8eEXAMPLE</requestId>
+    <keyName>keypair</keyName>
+    <keyFingerprint>00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00</keyFingerprint>
+</ImportKeyPairResponse>
